vcs/specs/parser/fail/expressions/invalid_index_expr.vr
// @test: parse-fail
// @level: L0
// @tags: parser, expressions, index, error
// @description: Index expression with empty brackets
// @expected-error: E018

fn test() {
    let x = arr[];  // Empty index expression
}
